--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -38,14 +38,20 @@ jobs:
 
     - name: Terraform Plan
       working-directory: ${{ env.BACKEND_DIR }}
-      run: terraform plan -no-color
+      run: |
+        terraform plan -no-color > plan_output.txt
+        echo "PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
+        cat plan_output.txt >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
       id: plan
-
+    
     - name: Post Plan to PR
       uses: actions/github-script@v6
+      env:
+        PLAN_OUTPUT: ${{ env.PLAN_OUTPUT }}
       with:
         script: |
-          const output = `### Terraform Plan (Backend) 📝\n\n\`\`\`\n${steps.plan.outputs.stdout}\n\`\`\``;
+          const output = `### Terraform Plan (Backend) 📝\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
           await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
