delete backend and infra

--- a/.github/workflows/deploy-redis-cluster.yaml
+++ b/.github/workflows/deploy-redis-cluster.yaml
@@ -3,7 +3,10 @@ name: Redis Cluster CI/CD
 on:
   push:
     branches: [master]
-  pull_request:
+  pull_request: 
+    branches: [master]
+    paths:
+      - '!.github/workflows/deploy-terraform-v2.yaml'
 
 env:
   HELM_VERSION: "3.17.1"
