testing again #terraform

--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -1,6 +1,11 @@
 name: Terraform - Create Resources
 
 on:
+  push:
+    branches: [ "master" ]
+    paths:
+      - 'backend-config/**'
+      - 'infrastructure/**'
   pull_request:
     branches: [ "master" ]
     paths:
