--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -106,7 +106,7 @@ jobs:
         aws s3api create-bucket \
           --bucket ${{ env.TF_STATE_BUCKET }} \
           --region ${{ secrets.AWS_REGION }} \
-          --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}        
+          --create-bucket-configuration LocationConstraint="us-east-1"
 
     - name: Terraform Init
       working-directory: ${{ env.INFRA_DIR }}
