--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -1,17 +1,18 @@
 name: Terraform - Create Resources
 
 on:
+  pull_request:
+    branches: [ "master" ]
+    paths:
+      - 'backend-config/**'
+      - 'infrastructure/**'
+    types: [opened, synchronize, reopened]
+
   push:
     branches: [ "master" ]
     paths:
       - 'backend-config/**'
       - 'infrastructure/**'
-  pull_request:
-    branches: [ "master" ]
-    paths:
-      - 'backend-config/**'
-      - 'infrastructure/**'    
-    types: [opened, synchronize, reopened]
 
 jobs:
   check-commit:
@@ -21,9 +22,8 @@ jobs:
       (contains(github.event.pull_request.title, '#terraform') ||
        contains(github.event.pull_request.body, '#terraform'))
     steps:
-      - run: echo "Commit válido para execução do Terraform workflow."
+      - run: echo "Pull Request válido para execução do Terraform workflow."
 
-  # Backend Plan (runs on PR)
   backend-plan:
     if: github.event_name == 'pull_request'
     needs: check-commit
@@ -33,16 +33,13 @@ jobs:
       BACKEND_DIR: "./backend-config"
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Terraform Configuration
-      uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -59,7 +56,6 @@ jobs:
         echo "PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
         cat plan_output.txt >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
-      id: plan
 
     - name: Post Plan to PR
       uses: actions/github-script@v6
@@ -67,7 +63,7 @@ jobs:
         PLAN_OUTPUT: ${{ env.PLAN_OUTPUT }}
       with:
         script: |
-          const output = `### Terraform Plan (Backend) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          const output = `### Terraform Plan (Backend)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
           await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
@@ -75,7 +71,6 @@ jobs:
             body: output
           });
 
-  # Infra Plan (runs on PR) - Usa bucket temporário para validação
   infra-plan:
     if: github.event_name == 'pull_request'
     needs: [check-commit, backend-plan]
@@ -83,35 +78,34 @@ jobs:
     environment: terraform-plan
     env:
       INFRA_DIR: "./infrastructure"
-      TF_STATE_BUCKET: "temp-tfstate-${{ github.event.pull_request.number }}-${{ github.run_id }}"
+      TF_STATE_BUCKET: "temp-tfstate-${{ github.event.pull_request.number }}"
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Terraform Configuration
-      uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Create Temporary S3 Bucket
+    - name: Ensure Bucket Exists
       run: |
-        aws s3api create-bucket \
-          --bucket ${{ env.TF_STATE_BUCKET }} \
-          --region ${{ secrets.AWS_REGION }} \
+        if ! aws s3api head-bucket --bucket ${{ env.TF_STATE_BUCKET }} 2>/dev/null; then
+          aws s3api create-bucket --bucket ${{ env.TF_STATE_BUCKET }} --region ${{ secrets.AWS_REGION }}
+        fi
 
     - name: Terraform Init
       working-directory: ${{ env.INFRA_DIR }}
       run: |
         terraform init \
           -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
+          -backend-config="key=infra/terraform.tfstate" \
+          -backend-config="region=${{ secrets.AWS_REGION }}" \
           -backend-config="skip_credentials_validation=true" \
           -backend-config="skip_region_validation=true"
 
@@ -129,7 +123,7 @@ jobs:
         PLAN_OUTPUT: ${{ env.INFRA_PLAN_OUTPUT }}
       with:
         script: |
-          const output = `### Terraform Plan (Infra) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          const output = `### Terraform Plan (Infra)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
           await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
@@ -137,11 +131,6 @@ jobs:
             body: output
           });
 
-    - name: Cleanup Temporary Bucket  # Remove after use
-      if: always()
-      run: aws s3 rb s3://${{ env.TF_STATE_BUCKET }} --force
-
-  # Backend Apply (runs on merge to master)
   deploy-backend:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -150,16 +139,13 @@ jobs:
       BACKEND_DIR: "./backend-config"
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Terraform Configuration
-      uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -185,7 +171,6 @@ jobs:
     outputs:
       bucket_name: ${{ steps.backend_outputs.outputs.bucket_name }}
 
-  # Infra Apply (runs on merge to master) - Usa bucket real criado pelo backend
   deploy-infra:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     needs: deploy-backend
@@ -195,16 +180,13 @@ jobs:
       INFRA_DIR: "./infrastructure"
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Terraform Configuration
-      uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -222,4 +204,4 @@ jobs:
       working-directory: ${{ env.INFRA_DIR }}
       run: |
         aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
-        kubectl get nodes
+        kubectl get nodes  
