--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -104,7 +104,7 @@ jobs:
       run: |
         terraform init \
           -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
-          -backend-config="key=infra/terraform.tfstate" \
+          -backend-config="key=cluster-redis/terraform.tfstate" \
           -backend-config="region=${{ secrets.AWS_REGION }}" \
           -backend-config="skip_credentials_validation=true" \
           -backend-config="skip_region_validation=true"
