--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -153,13 +153,38 @@ jobs:
           echo "Bucket existente. Nenhuma ação necessária."
         fi
 
+    - name: Ensure DynamoDB Table Exists
+      run: |
+        if ! aws dynamodb describe-table --table-name terraform-lock 2>/dev/null; then
+          aws dynamodb create-table \
+            --table-name terraform-lock \
+            --attribute-definitions AttributeName=LockID,AttributeType=S \
+            --key-schema AttributeName=LockID,KeyType=HASH \
+            --billing-mode PAY_PER_REQUEST
+        else
+          echo "Tabela DynamoDB existente. Nenhuma ação necessária."
+        fi
+
     - name: Terraform Init
       working-directory: ${{ env.BACKEND_DIR }}
       run: terraform init
 
-    - name: Terraform Apply
+    - name: Terraform Apply (only if plan has changes)
       working-directory: ${{ env.BACKEND_DIR }}
-      run: terraform apply -auto-approve
+      run: |
+        PLAN_OUTPUT=$(terraform plan -detailed-exitcode -no-color -lock=false)
+        EXIT_CODE=$?
+
+        if [ $EXIT_CODE -eq 2 ]; then
+          echo "Changes detected. Applying..."
+          terraform apply -auto-approve
+        elif [ $EXIT_CODE -eq 0 ]; then
+          echo "No changes to apply."
+        else
+          echo "$PLAN_OUTPUT"
+          echo "Error running terraform plan"
+          exit $EXIT_CODE
+        fi
 
     - name: Export Bucket Name
       working-directory: ${{ env.BACKEND_DIR }}
