--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -1,18 +1,17 @@
 name: Terraform - Create Resources
 
 on:
-  pull_request:
-    branches: [ "master" ]
-    paths:
-      - 'backend-config/**'
-      - 'infrastructure/**'
-    types: [opened, synchronize, reopened]
-
   push:
     branches: [ "master" ]
     paths:
       - 'backend-config/**'
       - 'infrastructure/**'
+  pull_request:
+    branches: [ "master" ]
+    paths:
+      - 'backend-config/**'
+      - 'infrastructure/**'    
+    types: [opened, synchronize, reopened]
 
 jobs:
   check-commit:
@@ -22,8 +21,9 @@ jobs:
       (contains(github.event.pull_request.title, '#terraform') ||
        contains(github.event.pull_request.body, '#terraform'))
     steps:
-      - run: echo "Pull Request válido para execução do Terraform workflow."
+      - run: echo "Commit válido para execução do Terraform workflow."
 
+  # Backend Plan (runs on PR)
   backend-plan:
     if: github.event_name == 'pull_request'
     needs: check-commit
@@ -33,13 +33,16 @@ jobs:
       BACKEND_DIR: "./backend-config"
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -56,6 +59,7 @@ jobs:
         echo "PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
         cat plan_output.txt >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
+      id: plan
 
     - name: Post Plan to PR
       uses: actions/github-script@v6
@@ -63,7 +67,7 @@ jobs:
         PLAN_OUTPUT: ${{ env.PLAN_OUTPUT }}
       with:
         script: |
-          const output = `### Terraform Plan (Backend)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          const output = `### Terraform Plan (Backend) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
           await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
@@ -71,6 +75,7 @@ jobs:
             body: output
           });
 
+  # Infra Plan (runs on PR) - Usa bucket temporário para validação
   infra-plan:
     if: github.event_name == 'pull_request'
     needs: [check-commit, backend-plan]
@@ -78,28 +83,35 @@ jobs:
     environment: terraform-plan
     env:
       INFRA_DIR: "./infrastructure"
-      TF_STATE_BUCKET: "tfstate-cluster-redis-jheimmys"  # Ajustado para usar o bucket final
+      TF_STATE_BUCKET: "temp-tfstate-${{ github.event.pull_request.number }}-${{ github.run_id }}"
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Create Temporary S3 Bucket
+      run: |
+        aws s3api create-bucket \
+          --bucket ${{ env.TF_STATE_BUCKET }} \
+          --region ${{ secrets.AWS_REGION }} \
 
     - name: Terraform Init
       working-directory: ${{ env.INFRA_DIR }}
       run: |
         terraform init \
           -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
-          -backend-config="key=cluster-redis/terraform.tfstate" \
-          -backend-config="region=${{ secrets.AWS_REGION }}" \
           -backend-config="skip_credentials_validation=true" \
           -backend-config="skip_region_validation=true"
 
@@ -117,7 +129,7 @@ jobs:
         PLAN_OUTPUT: ${{ env.INFRA_PLAN_OUTPUT }}
       with:
         script: |
-          const output = `### Terraform Plan (Infra)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          const output = `### Terraform Plan (Infra) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
           await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
@@ -125,6 +137,11 @@ jobs:
             body: output
           });
 
+    - name: Cleanup Temporary Bucket  # Remove after use
+      if: always()
+      run: aws s3 rb s3://${{ env.TF_STATE_BUCKET }} --force
+
+  # Backend Apply (runs on merge to master)
   deploy-backend:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -133,58 +150,28 @@ jobs:
       BACKEND_DIR: "./backend-config"
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Ensure Backend Bucket Exists
-      run: |
-        if ! aws s3api head-bucket --bucket tfstate-cluster-redis-jheimmys 2>/dev/null; then
-          aws s3api create-bucket --bucket tfstate-cluster-redis-jheimmys --region ${{ secrets.AWS_REGION }}
-        else
-          echo "Bucket existente. Nenhuma ação necessária."
-        fi
-
-    - name: Ensure DynamoDB Table Exists
-      run: |
-        if ! aws dynamodb describe-table --table-name terraform-lock 2>/dev/null; then
-          aws dynamodb create-table \
-            --table-name terraform-lock \
-            --attribute-definitions AttributeName=LockID,AttributeType=S \
-            --key-schema AttributeName=LockID,KeyType=HASH \
-            --billing-mode PAY_PER_REQUEST
-        else
-          echo "Tabela DynamoDB existente. Nenhuma ação necessária."
-        fi
-
     - name: Terraform Init
       working-directory: ${{ env.BACKEND_DIR }}
       run: terraform init
 
-    - name: Terraform Apply (only if plan has changes)
+    - name: Terraform Apply
       working-directory: ${{ env.BACKEND_DIR }}
-      run: |
-        PLAN_OUTPUT=$(terraform plan -detailed-exitcode -no-color -lock=false)
-        EXIT_CODE=$?
-
-        if [ $EXIT_CODE -eq 2 ]; then
-          echo "Changes detected. Applying..."
-          terraform apply -auto-approve
-        elif [ $EXIT_CODE -eq 0 ]; then
-          echo "No changes to apply."
-        else
-          echo "$PLAN_OUTPUT"
-          echo "Error running terraform plan"
-          exit $EXIT_CODE
-        fi
+      run: terraform apply -auto-approve
 
     - name: Export Bucket Name
       working-directory: ${{ env.BACKEND_DIR }}
@@ -198,6 +185,7 @@ jobs:
     outputs:
       bucket_name: ${{ steps.backend_outputs.outputs.bucket_name }}
 
+  # Infra Apply (runs on merge to master) - Usa bucket real criado pelo backend
   deploy-infra:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     needs: deploy-backend
@@ -207,13 +195,16 @@ jobs:
       INFRA_DIR: "./infrastructure"
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.11.0
 
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -221,7 +212,7 @@ jobs:
 
     - name: Terraform Init (with real backend)
       working-directory: ${{ env.INFRA_DIR }}
-      run: terraform init -backend-config="bucket=${{ needs.deploy-backend.outputs.bucket_name }}"  # Agora usando o bucket final
+      run: terraform init -backend-config="bucket=${{ needs.deploy-backend.outputs.bucket_name }}"
 
     - name: Terraform Apply
       working-directory: ${{ env.INFRA_DIR }}
