--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -127,8 +127,7 @@ jobs:
             echo "STATE_BUCKET=$TEMP_BUCKET" >> $GITHUB_ENV
             aws s3api create-bucket \
               --bucket "$TEMP_BUCKET" \
-              --region ${{ secrets.AWS_REGION }} \
-              --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
+              --region ${{ secrets.AWS_REGION }}
           fi
 
       - name: Terraform Init (infra)
