--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -162,7 +162,6 @@ jobs:
               body: output
             });
 
-  # 3. BACKEND APPLY (merge na master)
   deploy-backend:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -184,40 +183,66 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # 1) Detecta se o backend já existia antes deste merge
+      - name: Detect existing backend
+        run: |
+          BUCKET="tfstate-cluster-redis-jheimmys"
+          if aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
+            echo "BACKEND_EXISTS=true" >> $GITHUB_ENV
+          else
+            echo "BACKEND_EXISTS=false" >> $GITHUB_ENV
+          fi
+
+      # 2) Cria bucket + DynamoDB se precisar
       - name: Ensure Backend Bucket Exists
         run: |
-          REAL_BUCKET="tfstate-cluster-redis-jheimmys"
-          if ! aws s3api head-bucket --bucket "$REAL_BUCKET" 2>/dev/null; then
+          BUCKET="tfstate-cluster-redis-jheimmys"
+          if [ "${BACKEND_EXISTS}" = "false" ]; then
             aws s3api create-bucket \
-              --bucket "$REAL_BUCKET" \
-              --region ${{ secrets.AWS_REGION }}
+              --bucket "$BUCKET" \
+              --region ${{ secrets.AWS_REGION }} \
+              --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
           else
-            echo "Bucket existente. Nenhuma ação necessária."
+            echo "Bucket já existia. Pulando criação."
           fi
 
       - name: Ensure DynamoDB Table Exists
         run: |
-          if ! aws dynamodb describe-table --table-name terraform-lock 2>/dev/null; then
+          if [ "${BACKEND_EXISTS}" = "false" ]; then
             aws dynamodb create-table \
               --table-name terraform-lock \
               --attribute-definitions AttributeName=LockID,AttributeType=S \
               --key-schema AttributeName=LockID,KeyType=HASH \
               --billing-mode PAY_PER_REQUEST
           else
-            echo "Tabela DynamoDB existente. Nenhuma ação necessária."
+            echo "DynamoDB já existia. Pulando criação."
           fi
 
+      # 3) Terraform Init
       - name: Terraform Init (backend)
         working-directory: ${{ env.BACKEND_DIR }}
         run: terraform init
 
+      # 4) Terraform Apply — só se era a primeira vez
       - name: Terraform Apply (backend)
+        if: env.BACKEND_EXISTS == 'false'
         working-directory: ${{ env.BACKEND_DIR }}
         run: terraform apply -auto-approve
 
+      - name: Skip Terraform Apply
+        if: env.BACKEND_EXISTS == 'true'
+        run: echo "Backend já existia. Terraform apply pulado."
+
+      # 5) Exporta bucket_name sempre (para infra apply)
       - name: Export Bucket Name
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: echo "bucket_name=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
+        run: |
+          # Se foi aplicado agora, pega do output; senão, reutiliza o nome fixo
+          if [ "${BACKEND_EXISTS}" = "false" ]; then
+            echo "bucket_name=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
+          else
+            echo "bucket_name=tfstate-cluster-redis-jheimmys" >> $GITHUB_OUTPUT
+          fi
+
 
   # 4. INFRA APPLY (merge na master)
   deploy-infra:
