--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -32,6 +32,7 @@ jobs:
     environment: terraform-plan
     env:
       BACKEND_DIR: "./backend-config"
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -55,6 +56,19 @@ jobs:
             echo "USE_REAL=true" >> $GITHUB_ENV
           else
             echo "USE_REAL=false" >> $GITHUB_ENV
+          fi
+
+      - name: Ensure DynamoDB Table Exists (if using real)
+        if: env.USE_REAL == 'true'
+        run: |
+          if ! aws dynamodb describe-table --table-name terraform-lock 2>/dev/null; then
+            aws dynamodb create-table \
+              --table-name terraform-lock \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
+              --billing-mode PAY_PER_REQUEST
+          else
+            echo "DynamoDB table already exists."
           fi
 
       - name: Terraform Init (backend)
@@ -93,7 +107,7 @@ jobs:
               body: output
             });
 
-   # 2. INFRA PLAN (runs on PR)
+  # 2. INFRA PLAN (runs on PR)
   infra-plan:
     if: github.event_name == 'pull_request'
     needs: [check-commit, backend-plan]
@@ -128,7 +142,8 @@ jobs:
             echo "STATE_BUCKET=$TEMP_BUCKET" >> $GITHUB_ENV
             aws s3api create-bucket \
               --bucket "$TEMP_BUCKET" \
-              --region ${{ secrets.AWS_REGION }}
+              --region ${{ secrets.AWS_REGION }} \
+              --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
           fi
 
       - name: Terraform Init (infra)
@@ -163,11 +178,13 @@ jobs:
               body: output
             });
 
+  # 3. BACKEND APPLY (merge na master)
   deploy-backend:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     env:
       BACKEND_DIR: "./backend-config"
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -184,7 +201,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 1) Detecta se o backend já existia antes deste merge
       - name: Detect existing backend
         run: |
           BUCKET="tfstate-cluster-redis-jheimmys"
@@ -194,14 +210,14 @@ jobs:
             echo "BACKEND_EXISTS=false" >> $GITHUB_ENV
           fi
 
-      # 2) Cria bucket + DynamoDB se precisar
       - name: Ensure Backend Bucket Exists
         run: |
           BUCKET="tfstate-cluster-redis-jheimmys"
           if [ "${BACKEND_EXISTS}" = "false" ]; then
             aws s3api create-bucket \
               --bucket "$BUCKET" \
-              --region ${{ secrets.AWS_REGION }}
+              --region ${{ secrets.AWS_REGION }} \
+              --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
           else
             echo "Bucket já existia. Pulando criação."
           fi
@@ -218,12 +234,10 @@ jobs:
             echo "DynamoDB já existia. Pulando criação."
           fi
 
-      # 3) Terraform Init
       - name: Terraform Init (backend)
         working-directory: ${{ env.BACKEND_DIR }}
         run: terraform init
 
-      # 4) Terraform Apply — só se era a primeira vez
       - name: Terraform Apply (backend)
         if: env.BACKEND_EXISTS == 'false'
         working-directory: ${{ env.BACKEND_DIR }}
@@ -233,16 +247,13 @@ jobs:
         if: env.BACKEND_EXISTS == 'true'
         run: echo "Backend já existia. Terraform apply pulado."
 
-      # 5) Exporta bucket_name sempre (para infra apply)
       - name: Export Bucket Name
         run: |
-          # Se foi aplicado agora, pega do output; senão, reutiliza o nome fixo
           if [ "${BACKEND_EXISTS}" = "false" ]; then
             echo "bucket_name=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
           else
             echo "bucket_name=tfstate-cluster-redis-jheimmys" >> $GITHUB_OUTPUT
           fi
-
 
   # 4. INFRA APPLY (merge na master)
   deploy-infra:
@@ -251,6 +262,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       INFRA_DIR: "./infrastructure"
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
