--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -58,19 +58,6 @@ jobs:
             echo "USE_REAL=false" >> $GITHUB_ENV
           fi
 
-      - name: Ensure DynamoDB Table Exists (if using real)
-        if: env.USE_REAL == 'true'
-        run: |
-          if ! aws dynamodb describe-table --table-name terraform-lock 2>/dev/null; then
-            aws dynamodb create-table \
-              --table-name terraform-lock \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --billing-mode PAY_PER_REQUEST
-          else
-            echo "DynamoDB table already exists."
-          fi
-
       - name: Terraform Init (backend)
         working-directory: ${{ env.BACKEND_DIR }}
         run: |
@@ -80,6 +67,8 @@ jobs:
               -backend-config="key=cluster-redis/terraform.tfstate" \
               -backend-config="dynamodb_table=terraform-lock" \
               -backend-config="region=${{ secrets.AWS_REGION }}"
+            terraform import aws_s3_bucket.tf_state tfstate-cluster-redis-jheimmys
+            terraform import aws_dynamodb_table.tf_lock terraform-lock
           else
             terraform init
           fi
@@ -234,7 +223,12 @@ jobs:
 
       - name: Terraform Init (backend)
         working-directory: ${{ env.BACKEND_DIR }}
-        run: terraform init
+        run: |
+          terraform init
+          if [ "${BACKEND_EXISTS}" = "true" ]; then
+            terraform import aws_s3_bucket.tf_state tfstate-cluster-redis-jheimmys
+            terraform import aws_dynamodb_table.tf_lock terraform-lock
+          fi
 
       - name: Terraform Apply (backend)
         if: env.BACKEND_EXISTS == 'false'
