--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -66,9 +66,7 @@ jobs:
               -backend-config="bucket=tfstate-cluster-redis-jheimmys" \
               -backend-config="key=cluster-redis/terraform.tfstate" \
               -backend-config="dynamodb_table=terraform-lock" \
-              -backend-config="region=${{ secrets.AWS_REGION }}"
-            terraform import aws_s3_bucket.tf_state tfstate-cluster-redis-jheimmys
-            terraform import aws_dynamodb_table.tf_lock terraform-lock
+              -backend-config="region=${{ secrets.AWS_REGION }}" 
           else
             terraform init
           fi
@@ -189,63 +187,63 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Detect existing backend
+      - name: Check Existing Resources
+        id: check_resources
         run: |
-          BUCKET="tfstate-cluster-redis-jheimmys"
-          if aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
-            echo "BACKEND_EXISTS=true" >> $GITHUB_ENV
+          if aws s3api head-bucket --bucket "$REAL_BUCKET" 2>/dev/null; then
+            echo "bucket_exists=true" >> $GITHUB_OUTPUT
           else
-            echo "BACKEND_EXISTS=false" >> $GITHUB_ENV
+            echo "bucket_exists=false" >> $GITHUB_OUTPUT
+          fi
+        
+          if aws dynamodb describe-table --table-name "$DYNAMO_TABLE" 2>/dev/null; then
+            echo "table_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "table_exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Ensure Backend Bucket Exists
+      - name: Create S3 Bucket if Needed
+        if: steps.check_resources.outputs.bucket_exists == 'false'
         run: |
-          BUCKET="tfstate-cluster-redis-jheimmys"
-          if [ "${BACKEND_EXISTS}" = "false" ]; then
-            aws s3api create-bucket \
-              --bucket "$BUCKET" \
-              --region ${{ secrets.AWS_REGION }}
-          else
-            echo "Bucket já existia. Pulando criação."
-          fi
+          aws s3api create-bucket \
+            --bucket "$REAL_BUCKET" \
+            --region ${{ secrets.AWS_REGION }}
 
-      - name: Ensure DynamoDB Table Exists
+      - name: Create DynamoDB Table if Needed
+        if: steps.check_resources.outputs.table_exists == 'false'
         run: |
-          if [ "${BACKEND_EXISTS}" = "false" ]; then
-            aws dynamodb create-table \
-              --table-name terraform-lock \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --billing-mode PAY_PER_REQUEST
-          else
-            echo "DynamoDB já existia. Pulando criação."
-          fi
+          aws dynamodb create-table \
+            --table-name "$DYNAMO_TABLE" \
+            --attribute-definitions AttributeName=LockID,AttributeType=S \
+            --key-schema AttributeName=LockID,KeyType=HASH \
+            --billing-mode PAY_PER_REQUEST
 
-      - name: Terraform Init (backend)
+      - name: Terraform Init
+        working-directory: ${{ env.BACKEND_DIR }}
+        run: terraform init
+
+      - name: Import Existing Resources
+        if: steps.check_resources.outputs.bucket_exists == 'true' || steps.check_resources.outputs.table_exists == 'true'
         working-directory: ${{ env.BACKEND_DIR }}
         run: |
-          terraform init
-          if [ "${BACKEND_EXISTS}" = "true" ]; then
-            terraform import aws_s3_bucket.tf_state tfstate-cluster-redis-jheimmys
-            terraform import aws_dynamodb_table.tf_lock terraform-lock
+          if [ "${{ steps.check_resources.outputs.bucket_exists }}" == "true" ]; then
+            terraform import aws_s3_bucket.tf_state "$REAL_BUCKET"
+          fi
+          if [ "${{ steps.check_resources.outputs.table_exists }}" == "true" ]; then
+            terraform import aws_dynamodb_table.tf_lock "$DYNAMO_TABLE"
           fi
 
-      - name: Terraform Apply (backend)
-        if: env.BACKEND_EXISTS == 'false'
+      - name: Terraform Apply
         working-directory: ${{ env.BACKEND_DIR }}
         run: terraform apply -auto-approve
 
-      - name: Skip Terraform Apply
-        if: env.BACKEND_EXISTS == 'true'
-        run: echo "Backend já existia. Terraform apply pulado."
+      - name: Set Output Variable
+        working-directory: ${{ env.BACKEND_DIR }}
+        id: backend_outputs
+        run: echo "bucket_name=$REAL_BUCKET" >> $GITHUB_OUTPUT
 
-      - name: Export Bucket Name
-        run: |
-          if [ "${BACKEND_EXISTS}" = "false" ]; then
-            echo "bucket_name=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
-          else
-            echo "bucket_name=tfstate-cluster-redis-jheimmys" >> $GITHUB_OUTPUT
-          fi
+    outputs:
+      bucket_name: ${{ steps.backend_outputs.outputs.bucket_name }}
 
   # 4. INFRA APPLY (merge na master)
   deploy-infra:
